1. Collection API Улучшения[#216968]